# google-hashcode-2017

./: .gitignore  CMakeLists.txt  Readme.md  Slice.h  compress.sh  main.cpp  run.sh  visual.sh
in/: 1010F.in  1515F.in  1616F.in  16x16.in  my.in
visual/: module_visual.xml  slices.txt  visual.properties  visual.xml
visual/src/com/dimasmemas/: Config.java  Grid.java  Main.java  Slice.java  Vector2i.java
